--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <script src="scripts/jogo/animacao.js"></script>
     <script src="scripts/jogo/personagem.js"></script>
     <script src="scripts/jogo/cenario.js"></script>
     <script src="scripts/jogo/sketch.js"></script>
