--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
     <script src="scripts/p5/p5.js"></script>
     <script src="scripts/p5/p5.sound.min.js"></script>
+    <script src="scripts/p5/p5.collide2d.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8">
   </head>
