--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <script src="scripts/variaveis.js"></script>
+    <script src="scripts/load.js"></script>
+    
     <script src="scripts/jogo/pontuacao.js"></script>
     <script src="scripts/jogo/animacao.js"></script>
     <script src="scripts/jogo/personagem.js"></script>
     <script src="scripts/jogo/inimigo.js"></script>
     <script src="scripts/jogo/cenario.js"></script>
-    <script src="scripts/jogo/sketch.js"></script>
+
+    <script src="scripts/sketch.js"></script>
   </body>
 </html>
