--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html><html lang="en">
 	<head>
+    <link rel="shortcut icon" href="/imagens/assets/favicon.ico" />
     <script src="scripts/p5/p5.js"></script>
     <script src="scripts/p5/p5.sound.min.js"></script>
     <script src="scripts/p5/p5.collide2d.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8">
+    <title>Agnes e a floresta atemporal</title>
   </head>
   <body>
     <script src="scripts/variaveis.js"></script>
